<resources>
    <string name="app_name">BodyBurn</string>

    <!-- Página inicial -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="preg_registrarse">¿Aún no estas registrado?</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar con Email</string>
    <string name="crear_cuenta">Crear cuenta con Email</string>
    <string name="tos">Acepto los términos y condiciones del servicio y la politica de privacidad</string>
    <string name="aceptar_publi">Me gustaria recibir información de las novedades de la aplicación</string>

    <!-- Otros -->
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="toolbar">@string/app_name</string>
    <string name="premium">Premium</string>
    <string name="btn_chat">Chat Pro</string>
    <string name="config">Configuración</string>

    <!-- Pantalla inicio -->
    <string name="btn_registrarEntreno">Registrar entrenamiento</string>
    <string name="unete_premium">¡Únete al plan premium!</string>

    <!-- Barra de abajo -->
    <string name="btn_home">Inicio</string>
    <string name="btn_rutinas">Rutinas</string>
    <string name="btn_historial">Historial</string>
    <string name="btn_perfil">Perfil</string>
    <string name="btn_pruebas">Pruebas</string>

    <!-- Página iniciar sesión y registrarse-->
    <string name="siguiente">siguiente</string>
    <string name="usuario">Usuario</string>


    <!-- Página Rutinas-->
    <string name="nom_ejercicio">Elev. Laterales</string>
    <string name="nom_ejercicio1">Press Banca</string>
    <string name="nom_ejercicio2">Sentadilla</string>
    <string name="nom_ejercicio3">Remo</string>
    <string name="nom_ejercicio4">Peso muerto</string>
    <string name="nom_dia_rutina">Empujes</string>
    <string name="nom_rutina">Push pull leg</string>
    <string name="rutina_editar_dia">Editar rutina</string>

    <!-- Página Configuración-->
    <string name="dto_inicio">Datos de inico de sesión</string>
    <string name="notifs">Notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="sis_metrico">Sistema métrico</string>
    <string name="acces">Accesibilidad</string>
    <string name="dto_pago">Datos de pago</string>

    <string name="empty"></string>


</resources>
