<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorialActivityDetalleDia">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/datePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2023"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="20sp"
            />

        <Button
            android:id="@+id/btn_registroej2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pasoDetalleEj"
            android:text="@string/nom_ejercicio2"
            android:background="@drawable/boton_bordes"
            android:textAlignment="textStart"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/btn_registroej"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pasoDetalleEj"
            android:text="@string/nom_ejercicio1"
            android:background="@drawable/boton_bordes"
            android:textAlignment="textStart"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/btn_registroej1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pasoDetalleEj"
            android:background="@drawable/boton_bordes"
            android:text="@string/nom_ejercicio"
            android:textAlignment="textStart"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_bordes"
            android:onClick="pasoDetalleEj"
            android:text="@string/nom_ejercicio3"
            android:layout_marginBottom="20sp"/>
    </LinearLayout>


</RelativeLayout>