<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_resistrarEntreno"
        android:layout_width="165dp"
        android:layout_height="91dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:onClick="pasoRegistrarEntreno"
        android:text="@string/btn_registrarEntreno" />

    <Button
        android:id="@+id/btn_unetePremium"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_above="@id/bottomNavigation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:background="@drawable/boton_bordes"
        android:text="@string/unete_premium"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/ic_star_24"/>

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_resistrarEntreno"
        android:layout_centerHorizontal="true"
        android:drawableEnd="@drawable/ic_chat_bubble_24"
        android:drawablePadding="500sp"
        android:onClick="pasoChat"
        android:text="@string/btn_chat" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu" />
    <!--
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:layout_below="@+id/btn_resistrarEntreno"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="TODO"
                    android:maxHeight="500dp"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="500dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/entrenamientoa" />
            </LinearLayout>

        </HorizontalScrollView>
    -->

</RelativeLayout>